--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,8 +33,9 @@
         <cs301.birthdaycake.CakeView
             android:id="@+id/cakeview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="580dp"
             android:layout_weight="1" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -47,6 +48,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="HOORAY!!" />
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="108dp"
+            android:layout_height="144dp"
+            android:layout_weight="0"
+            android:text="Frosting" />
 
         <Button
             android:id="@+id/button2"
